<resources>
    <string name="app_name">AppKODE</string>
    <string name="all">All</string>
    <string name="android">Android</string>
    <string name="ios">Ios</string>
    <string name="design">Design</string>
    <string name="management">Management</string>
    <string name="qa">Qa</string>
    <string name="back_office">Back office</string>
    <string name="frontend">Frontend</string>
    <string name="hr">Hr</string>
    <string name="pr">Pr</string>
    <string name="backend">Backend</string>
    <string name="support">Support</string>
    <string name="analytics">Analytics</string>

    <string name="hint">Введи имя, тег, почту...</string>
    <string name="filter_by_birthday">Сортировка по дню рождения</string>
    <string name="filter_by_abc">Сортировка по алфавиту</string>
    <string name="reload">Попробовать снова</string>
    <string name="will_To_Try_Fix">Постараемся быстро починить</string>
    <string name="bulling">Какой-то сверхразум все сломал</string>
    <string name="empty_response">Мы ничего не нашли</string>
    <string name="empty_correct_text">Попробуй скорректировать запрос</string>
    <string name="cancel">Отмена</string>
    <string name="network_error">Не могу обновить данные.Проверь соединение с интернетом.</string>
    <string name="load">Секундочку, гружусь...</string>
    <string name="filter_Title">Сортировка</string>
    <string name="title_sort_by_abc">По алфавиту</string>
    <string name="title_sort_by_birthday">По дню рождения</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>