<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentFilter"
    android:layout_width="match_parent"
    android:layout_height="218dp"
    android:layout_alignParentStart="true"
    android:layout_alignParentEnd="true"
    android:layout_alignParentBottom="true"
    android:background="@drawable/bottom_filter_maket"
    >

    <TextView
        android:id="@+id/filterTitle"
        style="@style/filterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="0sp"
        android:text="@string/filter_Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/filter_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="12dp"
        android:gravity="bottom"
        android:text="@string/title_sort_by_birthday"
        style="@style/titleSortByAbc"
        app:layout_constraintBottom_toBottomOf="@+id/filterByBirthday"
        app:layout_constraintStart_toEndOf="@+id/filterByBirthday"
        app:layout_constraintTop_toTopOf="@+id/filterByBirthday"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="14dp"
        android:gravity="bottom"
        android:text="@string/title_sort_by_abc"
        style="@style/titleSortByAbc"
        app:layout_constraintBottom_toBottomOf="@+id/filterByAbc"
        app:layout_constraintStart_toEndOf="@+id/filterByAbc"
        app:layout_constraintTop_toTopOf="@+id/filterByAbc" />

    <ImageView
        android:id="@+id/filterByAbc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="84dp"
        android:layout_marginBottom="114dp"
        android:src="@drawable/selectedicon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/filterByBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="144dp"
        android:layout_marginBottom="54dp"
        android:src="@drawable/notselected"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>